<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusableInTouchMode="true">
        <EditText
            android:background="@drawable/edit_text_style"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:layout_height="45dp"
            android:layout_width="match_parent"
            android:hint="@string/first_name"
            android:id="@+id/first_name" />
        <EditText
            android:background="@drawable/edit_text_style"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:layout_height="45dp"
            android:layout_width="match_parent"
            android:hint="@string/last_name"
            android:id="@+id/last_name" />
        <EditText
            android:background="@drawable/edit_text_style"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:layout_height="45dp"
            android:layout_width="match_parent"
            android:hint="@string/login"
            android:id="@+id/login_form_reg" />
        <EditText
            android:background="@drawable/edit_text_style"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:layout_height="45dp"
            android:layout_width="match_parent"
            android:hint="@string/password"
            android:id="@+id/password_form_reg" />
        <LinearLayout
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">
            <TextView
                android:id="@+id/reg_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/make_reg"
                android:textSize="15dp"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:background="@drawable/button_add_style"
                />
        </LinearLayout>

    </LinearLayout>
</ScrollView>